objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Expected_professional_experience__c</fullName>
        <description>Expected professional experience of the required doctor.
Robin S. 13.06.2019</description>
        <label>Expected professional experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - 2 Years</fullName>
                </value>
                <value>
                    <fullName>2 - 5 Years</fullName>
                </value>
                <value>
                    <fullName>5 &gt; Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Number_Of_Services_Per_Month__c</fullName>
        <label>Anzahl Dienste/Monat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Beds_In_The_Department__c</fullName>
        <label>Number of beds in the department</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Area_Shipping_Adress__c</fullName>
        <formula>LEFT( Account.ShippingPostalCode , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code Area Shipping Adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Number_of_Qualification_Doctor__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Is used for the DLRS and the opportunity automatic naming process. 
Robin S. 26.02.2019</description>
        <label>[T] Number of Qualification Doctor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Call_Services_Per_Month__c</fullName>
        <label>Number of call services per month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>optimal_Time_Window_Accessibility__c</fullName>
        <label>optimal time window accessibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_until_Contractual_agreements__c</fullName>
        <description>SFC-2356</description>
        <label>Valid until (Contractual agreements)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weiterbildungserm_chtigungen_der_C__c</fullName>
        <label>Weiterbildungsermächtigungen der CÄ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negotiation_topics_customer_request__c</fullName>
        <description>SFC-2356</description>
        <label>Negotiation topics (customer request)</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_requirements_for_candidates__c</fullName>
        <description>Special requirements for candidates.
Robin S. 13.06.2019</description>
        <label>Special requirements for candidates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Strategy_Customer_Commment__c</fullName>
        <label>Supplier Strategy Customer Commment</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_NumberAssistantDoctorQualificatio__c</fullName>
        <label>[T] Number Assistant Doctor Qualificatio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_NumberMedicalSpecialistQualificat__c</fullName>
        <label>[T] Number Medical Specialist Qualificat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Number_of_Qualification_Caregiver__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Is used for the DLRS and the opportunity automatic naming process.
Robin S. 20.02.2019</description>
        <label>[T] Number of Qualification Caregiver</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perspectives_For_Further_Development__c</fullName>
        <label>Perspectives for further development</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Call_Services_Per_Month_Max__c</fullName>
        <label>Number of call services per month max.</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Was_ist_wichtig_am_neuen_Arbeitsplatz__c</fullName>
        <label>Was ist wichtig am neuen Arbeitsplatz?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bonus_agreement_bonus_malus_regulation__c</fullName>
        <description>SFC-2356</description>
        <label>Bonus agreement (bonus/malus regulation)</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Medical_Specialist_Exam_Specialisation__c</fullName>
        <label>Medical Specialist Exam Specialisation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Emergency_Services_Month_Max__c</fullName>
        <label>Number of emergency services / month max</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Emergency_Services_Per_Month__c</fullName>
        <label>Number of emergency services per month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_For_Permanent_Employment_From__c</fullName>
        <label>Available for permanent employment from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ben_tigte_Weiterbildungserm_chtigung_im__c</fullName>
        <label>Benötigte Weiterbildungsermächtigung im</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_further_training_authorization__c</fullName>
        <label>Required further training authorization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <recordTypes>
        <fullName>KAM_Akquise</fullName>
        <active>true</active>
        <businessProcess>KAM Aqcuisition</businessProcess>
        <label>KAM Akquise</label>
    </recordTypes>
    <recordTypes>
        <fullName>PlacementDoctor</fullName>
        <active>true</active>
        <businessProcess>Placement</businessProcess>
        <label>Placement Doctor</label>
    </recordTypes>
    <recordTypes>
        <fullName>SubstituteDoctor</fullName>
        <active>true</active>
        <businessProcess>Vertretung</businessProcess>
        <label>Substitute Doctor</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecruitmentDoctor</fullName>
        <active>true</active>
        <businessProcess>Recruitment</businessProcess>
        <label>Recruitment Doctor</label>
    </recordTypes>
    <recordTypes>
        <fullName>PlacementCaregiver</fullName>
        <active>true</active>
        <businessProcess>Placement</businessProcess>
        <label>Placement Caregiver</label>
    </recordTypes>
    <recordTypes>
        <fullName>SubstituteCaregiver</fullName>
        <active>true</active>
        <businessProcess>Vertretung</businessProcess>
        <label>Substitute Caregiver</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecruitmentCaregiver</fullName>
        <active>true</active>
        <businessProcess>Recruitment</businessProcess>
        <label>Recruitment Caregiver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategic_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Strategy</businessProcess>
        <label>Strategic Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Recruitment</businessProcess>
        <description>For technical quote and contract processes.</description>
        <label>Technical Opportunity</label>
    </recordTypes>
    <validationRules>
        <fullName>Operation_Time</fullName>
        <active>true</active>
        <errorConditionFormula>DateFrom__c  &gt;=  DateTo__c &amp;&amp;  (RecordTypeId = &quot;0121r000000ZzFCAA0&quot;  || RecordTypeId = &quot;0121r000000ZzCjAAK&quot;)</errorConditionFormula>
        <errorDisplayField>Zeitbis__c</errorDisplayField>
        <errorMessage>Das Einsatzende darf nicht vor dem Einsatzbeginn sein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ClosedOppsReadOnly</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; ISPICKVAL(PRIORVALUE(StageName),&quot;verloren&quot;) ||
ISPICKVAL(PRIORVALUE(StageName),&quot;gewonnen&quot;)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Eine geschlossene Opportunity darf nicht bearbeitet werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ClosedLostWithReason</fullName>
        <active>true</active>
        <description>Wenn Opp auf Verloren gesetzt wurde, muss ein Grund angegeben werden</description>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; AND( 
ISPICKVAL(StageName, &quot;Verloren&quot;), 
ISBLANK( Text( LostReason__c )))</errorConditionFormula>
        <errorMessage>Bitte Grund für Verlust angeben</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityCondition</fullName>
        <active>true</active>
        <description>The conditions for the candidat must be &lt; than the condition for the hospital.</description>
        <errorConditionFormula>(ConditionCandidateFA__c &gt;  ConditionClinicFA__c || ConditionCandidateAssi__c &gt;  ConditionClinicAssi__c)</errorConditionFormula>
        <errorMessage>The condition for the clinic must be greater or equal than the condition for the candidate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_less_equal_Created_Date</fullName>
        <active>false</active>
        <description>Close Date must be less than or equal Created Date</description>
        <errorConditionFormula>CloseDate &lt; DATEVALUE(CreatedDate)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Der Schlusstermin darf nicht nicht der Vergangenheit liegen!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NonTariffCompensationOnlyForNonTariff</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Non_tariff_compensation__c)) &amp;&amp;
NOT(ISPICKVAL( Compensation__c, &quot;Außertariflich&quot; ))</errorConditionFormula>
        <errorDisplayField>Non_tariff_compensation__c</errorDisplayField>
        <errorMessage>You can only edit this field if you pick Non-Tariff in the compensation field.</errorMessage>
    </validationRules>
</CustomObject>